--- a/scripts/clustering-countries.Rmd
+++ b/scripts/clustering-countries.Rmd
@@ -641,11 +641,17 @@ db_clust %>%
 
 ## Hierarchical clustering
 
-Firstly, let us look at the map clusters for hierarchical clustering. According to the results with 2, 3, and 4 clusters, we observe that there is no significant change when we add up the number of clusters each time. Since the number of clusters are given by the optimization methods above, it shows that 2, 3, or 4 clusters will give us the best clustering results, we will not continue adding up the number of clusters over 4. Therefore, we might decide that $k = 2$ is the optimal number of clusters we want to analyze in hierarchical clustering.
+Firstly, let us look at the map clusters for hierarchical clustering. According to the results with 2, 3, 4, and 5 clusters, we observe that there is no significant change when we add up the number of clusters each time from 2 to 4. Since the number of clusters are given by the optimization methods above, it shows that 2, 3, 4, or 5 clusters will give us the best clustering results, we will not continue adding up the number of clusters over 5. Therefore, we might decide that $k = 2$ and $k = 5$ are the optimal numbers of clusters we want to analyze in hierarchical clustering.
+
+## k=2
 
 Focusing on the map clusters when $k = 2$, we could easily find that the result mainly splits the map into two regions: a large part of African and Middle East countries with some countries in South Asia (red region), and the rest of the world (blue region). Here are some examples of the countries in red region: Niger, Chad, South Africa, Nigeria, Iraq, Liberia, Afghan, etc., and some examples of the countries in blue region: Canada, the United States, Australia, India, and so on. According to the data set and the information searched online, we find that the countries in the red region has the same properties: very high `child_mort`, low `income`, low `gdpp`, very high `total_fer`, relatively low `life_expec`, and so on. Compared to those countries in red region, we observe an obvious difference from those properties of the countries in the blue region: generally speaking, countries in the blue region have relatively better socio-economic and health conditions. It is worth mentioning that, we find that `total_fer` is an especially important indicator affecting the clustering results in this case. We observe that some countries in the blue region also have relatively weak socio-economic condition, like India (`income` = 4410, `child_mort` = 58.8, `gdpp` = 1350). However, those countries with weak socio-economic condition in the blue region always have relatively low `total_fer`, compared to pretty high average level of `total_fer` of the countries in red region.
 
 In this case, we could infer that hierarchical clustering performs well in dividing the countries into two types: Stage 1 countries (red region), and Stage 2-5 countries (blue region). The classification method here is known as Demographic Transition Model Stages, which is widely accepted in the social sciences because of the well-established historical correlation linking dropping fertility to social and economic development. Stage 1 countries generally characterized by pre-industrial societies in which both birth and death rates are quite high. Birth rates and death rates are effectively in balance. The lack of food availability as well as inadequate medical care or effective sanitation and hygiene means the population does not grow very much due to disease and starvation. Therefore, we conclude that hierarchical clustering performs well in stably categorizing countries into two levels with pretty good interpretation.
+
+## k=5
+
+According to the property of the Hierarchical Clustering, adding up the number of cluster each time will not divide one region to two, keeping the rest of the region unchanged. Therefore, compared to the previous trails, the Hierarchical Clustering results in a significant separation, which mainly divides the blue region in hierarchical clustering $k = 2$ into two region: green region and yellow region, keeping the Stage 1 countries (red region) almost unchanged. (Since the change in clustering $k=3$ and $k=4$ is not significant, we will not focus on analyzing those parts.) In the yellow region, it includes many countries in Asia, South America, Middle East, and East Europe: for example, Brazil, China, Russia, Poland, Thai, Libya, etc. The common properties of those countries are middle `income`, middle `gdpp`, middle to low `child_mort`, middle to low `total_fer`, and so on. In the green region, it includes the U.S., Australia, Canada, and the countries mainly in North Europe, such as Norway, Iceland, Switzerland, the U.K., etc. Compared to the countries in the yellow region, those green region countries have much better socio-economic and health conditions. Overall speaking, the Hierarchical Clustering with $k=5$ performs well in categorizing countries into several main regions with obvious socio-economic and health levels. However, we could not ignore the purple region and the blue region, which are two clusters that only contain very few countries. When we are trying to combine those two clusters with the three clusters we talked about above, we find that it is hard to interpret all the clusters together with an clear trend of change of socio-economic and health levels. Thus, we might still prefer the Hierarchical Clustering with $k=2$.
 
 ## Model-based clustering
 
